# wasm-zk-snarks

./: Cargo.toml  README.md
src/: cli.rs  keygen.rs  lib.rs  main.rs  proof.rs  tests.rs  utils.rs  wasm_bindings.rs
tests/: keygen_tests.rs
