[package]
name = "wasm-zk-snarks"
version = "0.1.1"
edition = "2021"
authors = ["nzengi <zenginureddin1@gmail.com>"]
description = "WASM uyumlu kriptografik anahtar yönetimi kütüphanesi"
license = "MIT"

[dependencies]
rand = "0.8"
zeroize = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
structopt = "0.3"

[features]
wasm = []

[lib]
name = "wasm_zk_snarks"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.3"  # Benchmarking için
